# StaffSim

./: .gitignore  MANUAL.md  README.md  pyproject.toml  text.txt
Resultados Final/: decision_tree_lookup.csv  demand_calls.parquet  demand_expected.parquet  demand_fte.parquet  depth_selection_importance.csv  depth_selection_metrics.csv  orchestration_log.csv  run_config.json  sched_delta.parquet  sched_kpi.parquet  sched_over.parquet  sched_planned.parquet  sched_under.parquet  summary.csv  summary_valor_cp_sat.csv
Resultados Final/search_logs/run1/cp_sat/: D_0099869b11_run1.txt  D_00be64f53e_run1.txt  D_018e23b9bf_run1.txt  (+740 more)
camilotest/: demand_kpi.parquet  orchestration_log.csv  scenarios.csv  sched_detail.parquet  summary.csv
src/staffsim/: __init__.py  generate.py  gui_app.py  orchestrate.py  review_app.py  schedule.py
src/staffsim/analysis/: _theme.py  app_consulta.py  decision_tree_mobs.py  depth_selection.py  plot_mobs_dist.py  plot_tree_partition.py
src/staffsim/cli/: generate.py
src/staffsim/curves/: __init__.py  blend.py  calls.py  generator.py  rope_model.py  rounding.py  simulator_core.py  week_weights.py
src/staffsim/demand/: __init__.py  headless.py
src/staffsim/io/: export.py
src/staffsim/orchestrator/: __init__.py  engine.py  grid.py  storage.py
src/staffsim/scheduling/: __init__.py  headless.py  hexaly_models.py  io.py  metrics.py  plotting.py  run1_model.py  run2_model.py  search.py
src/staffsim/workload/: __init__.py  baseline.py  intervals.py
tests/: test_export_metrics.py  test_generator.py  test_gui_core.py  test_orchestrator.py
(+1386 files in other folders)
