[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staffsim"
version = "0.1.0"
description = "Synthetic weekly call curve and FTE requirement simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "streamlit>=1.36",
  "pandas>=2.0",
  "ortools>=9.9",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
